--- a/docs/docs/genai/tracing/index.mdx
+++ b/docs/docs/genai/tracing/index.mdx
@@ -251,18 +251,18 @@ pip install mlflow-tracing
   <TabItem value="integrations" label="Library Integrations">
     Explore specific integrations for your framework:
 
-    **[OpenAI Integration](/genai/tracing/integrations/openai)** - Trace OpenAI API calls
+    **[OpenAI Integration](/genai/tracing/integrations/listing/openai)** - Trace OpenAI API calls
 
-    **[LangChain Integration](/genai/tracing/integrations/langchain)** - Trace LangChain applications
+    **[LangChain Integration](/genai/tracing/integrations/listing/langchain)** - Trace LangChain applications
 
-    **[LlamaIndex Integration](/genai/tracing/integrations/llamaindex)** - Trace LlamaIndex workflows
+    **[LlamaIndex Integration](/genai/tracing/integrations/listing/llamaindex)** - Trace LlamaIndex workflows
 
     **[All Integrations](/genai/tracing/integrations)** - Browse all supported libraries
   </TabItem>
   <TabItem value="analyze" label="Analyze Traces">
     Learn how to work with your trace data:
 
-    **[Viewing Traces](/genai/tracing/ui)** - Explore traces in the MLflow UI
+    **[Viewing Traces](/genai/tracing/observe-with-traces/ui)** - Explore traces in the MLflow UI
 
     **[Querying Traces](/genai/tracing/search-traces)** - Programmatically search and retrieve traces
 
