--- a/docs/docs/genai/tracing/observe-with-traces/ui.mdx
+++ b/docs/docs/genai/tracing/observe-with-traces/ui.mdx
@@ -9,7 +9,7 @@ import TabItem from "@theme/TabItem";
 
 ## Traces within MLflow Experiments
 
-After logging your traces, you can view them in the [MLflow UI](/ml/tracking/#tracking_ui), under the "Traces" tab in the main experiment page. This tab is also available within the individual run pages, if your trace was logged within a run context.
+After logging your traces, you can view them in the [MLflow UI](/genai/tracing/observe-with-traces/ui), under the "Traces" tab in the main experiment page. This tab is also available within the individual run pages, if your trace was logged within a run context.
 
 ![MLflow Tracking UI](/images/llms/tracing/trace-experiment-ui.png)
 
